# x-chital

./: .gitignore  .gitmodules  README.md
containerd-rvisor/: service.go
discuss/: README.md
discuss/11/: report.md
discuss/12/: Linux Kernel Module Rust 说明 7666d53fab6f4c62ad34881242d6b47b.md
discuss/14/: guide.md  runrsc 2e251e2f13274098ba2431ec8b4f78f5.md
discuss/15/: runrsc 2e251e2f13274098ba2431ec8b4f78f5.md
discuss/18/: rvisor1(3)(1)(2).pptx
discuss/19/: Q&A 9e726f7fb97f42379beb27aa7c6478e3.md
discuss/2/: 总结1.docx  调研1.docx
discuss/3/: WA和分布式的选题想法(1).md
discuss/5/: rVisor.md
discuss/6/: rVisor2.md
discuss/7/: 本周任务.md
docs/conclusion/: conclusion.md
docs/feasibility/: feasibility.md  feasibility_yzf.md
docs/final/: final.md
docs/research/: research.md
runrsc/: .gitignore  Makefile  README.md  Readme.md  Test  a.out  runrsc  runrsc.c
runrsc/test/: .gitignore  Makefile  desh  hello.c
rvisor/: .gitignore  Cargo.toml  runrsc  test  test.c
rvisor-kernel/: .gitignore  Cargo.toml  Kbuild  Makefile  README.md  configure
rvisor-kernel/linux-kernel-module-rust/: Cargo.toml  README.md  build.rs
rvisor-kernel/src/: container.rs  iodev.rs  lib.rs  log.rs  string.rs
rvisor/src/runrsc/: main.rs
rvisor/src/runrsc/cli/: boot.rs  cli.yml  mod.rs  run.rs
rvisor/src/sentry/: error.rs  lib.rs
rvisor/src/sentry/kernel/: fs.rs  mod.rs  task.rs
rvisor/src/sentry/kernel/syscall/: mod.rs  open.rs
rvisor/src/sentry/platform/: mod.rs  ptrace.rs  reader.rs
rvisor/src/sentry/platform/registers/: mem.rs  mod.rs  reader.rs  writer.rs
(+21 files in other folders)
