[package]
name = "rvisor"
version = "0.1.0"
authors = ["dnailz"]
edition = "2018"

[[bin]]
name = "runrsc"
path = "src/runrsc/main.rs"

[lib]
name = "sentry"
path = "src/sentry/lib.rs"

[dependencies.clap]
version = "~2.27.0"
features = ["yaml"]

[dependencies]
nix = "0.17.0"
log = "0.4.8"
env_logger = "0.7.1"

